<resources>
    <string name="app_name">Twendeni Magadi</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">Login</string>
    <string name="welcome">Welcome</string>

    <string name="title_activity_create_account">Twendeni Magadi</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="william_nguru">Dickson Kimeu</string>
    <string name="user_email">dickson.kimeu@etma.org</string>
    <string name="target_amount">0</string>
    <string name="contributed">0</string>
    <string name="pledges_amount">0</string>
    <string name="target_header">Project Target</string>
    <string name="contributed_header">All Contributions</string>
    <string name="current_pledges">My Contributions</string>
    <string name="my_target">My Target</string>
    <string name="pledges_header">My Contributions</string>
    <string name="title_activity_statements">My Statements</string>
    <string name="title_activity_pledge_history">My Pledge History</string>
    <string name="title_activity_make_contribution">My Contributions</string>
    <string name="title_activity_manage_members">Manage Members</string>
    <string name="title_activity_project_target">Project Target</string>
    <string name="title_activity_profile">My Profile</string>
    <string name="sample_description_statement">Pledged 30,000 on Thursday 26th June, 2018</string>
    <string name="statement_number">DE000001</string>
    <string name="no_new_statements">No statements found, please check back later!</string>
    <string name="ok">OK</string>
    <string name="no_new_members">No members added. Use the (+) button below to start!</string>
    <string name="all_contributions">0</string>
    <string name="no_pledge_history">You have no pledges available. Use the button below to add!</string>
    <string name="invitation_title">TwendeniMagadi</string>
    <string name="invitation_message">Download TwendeniMagadi app and join us as we move to Magadi together!</string>
    <string name="title_activity_add_member">Add Member</string>
    <string name="full_name">Full name</string>
    <string name="id_number_hint">ID number</string>
    <string name="cell_phone">Phone</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="title_activity_member_relationships">Select Relationship</string>
    <string name="sample_relationship">Husband</string>
    <string name="no_new_contributions">No new contributions found. Please add one using the (+) button below!</string>
    <string name="title_activity_add_contribution">Add Contribution</string>
    <string name="paid_by">Paid by</string>
    <string name="amount_hint">Amount</string>
    <string name="payment_method">Payment Method</string>
    <string name="cell_phone_hint">Reference #</string>
    <string name="date_hint">Date</string>
    <string name="pledges_hint">Pledges</string>
    <string name="title_activity_add_pledge">Add Pledge</string>
    <string name="stakes">Select Stake</string>
    <string name="payment_period">Payment period</string>
    <string name="first_payment_hint">First payment</string>
    <string name="title_activity_stakes">Select Stake</string>
    <string name="stake_hint">Select stake</string>
    <string name="title_activity_payment_periods">Select Payment Period</string>
    <string name="phone_hint">Phone</string>
    <string name="email_address">Email address</string>
    <string name="date_of_birth_hint">Date of birth</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="login_header">LOGIN</string>
    <string name="register_header">REGISTER</string>
    <string name="member_hint">Select member</string>
    <string name="full_name_sample">Dickson Kimeu</string>
    <string name="performance">Performance</string>
    <string name="date_sample">Pledged on 9/12/2017</string>

    <string name="title_activity_splash_screen">Welcome Home</string>
    <string name="login">LOGIN</string>
    <string name="user_name_hint">Phone number</string>
    <string name="password_hint">Password</string>
    <string name="password_confirm_hint">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="members_header">Members</string>
    <string name="contributions_header">Contributions</string>
    <string name="search">Search</string>
    <string name="search_hint">Search …</string>
    <string name="confirm_delete_member">Delete</string>
    <string name="delete_member_desc">Are you sure you want to delete this member? Please confirm!</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="actions">Actions</string>
    <string name="member_pledge_hint">Select Pledge</string>
    <string name="title_activity_payment_modes">Select Payment Mode</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="coming_soon">Coming soon!</string>
    <string name="give_feedback">Get Support</string>
    <string name="donate">DONATE NOW</string>
    <string name="start_date_hint">Start date</string>
    <string name="end_date_hint">End date</string>
    <string name="title_activity_pledge_amortization">VIEW MY PLAN</string>
    <string name="member_name">Member</string>
    <string name="placeholder_name">Dickson Kimeu</string>
    <string name="pledge_name">Pledge name</string>
    <string name="pledge_name_hint">Dickson Kimeu / 200,000</string>
    <string name="pledge_stake">Pledge stake</string>
    <string name="pledge_stake_hint">Gold (5000000 – 1000000)</string>
    <string name="pledge_amount">Pledge amount</string>
    <string name="pledge_amount_hint">5,000,000</string>
    <string name="payment_period_hint">Monthly</string>
    <string name="amortize">VIEW MY PLAN</string>
    <string name="confirm_delete_member_pledge">Confirm Delete</string>
    <string name="delete_member_pledge_desc">Are you sure you want to delete this pledge? Confirm to proceed!</string>
    <string name="title_activity_amortization_detail">My Pledge Plan</string>
    <string name="no_new_amortizations">Your pledge plans are  being processed. Please Check back shortly!</string>
    <string name="title_activity_pledge_details">Pledge Details</string>
    <string name="view_amortizations">VIEW MY PLAN</string>
    <string name="due_date_sample">Due : 10/25/2018</string>
    <string name="pledge_sample">Support Magadi</string>
    <string name="contribution_date">2/14/2018</string>
    <string name="ref_number">Ref# 254717121909</string>
    <string name="title_activity_contribution_pay">Pay Now</string>
    <string name="lipa_na_mpesa">LIPA NA MPESA</string>
    <string name="cell_phone_title">Mobile phone</string>
    <string name="placeholder_cell">254717121909</string>
    <string name="status">Status</string>
    <string name="sample_status">UNPAID</string>
    <string name="sample_contribution">KES 23,000</string>
    <string name="sample_date">10/25/2018</string>
    <string name="unpaid_contribution_status">PENDING</string>
    <string name="paid_contribution_status">PAID</string>
    <string name="sample_mpesa_ref">254717121909 | PENDING</string>
    <string name="sample_payment_mode">MPESA</string>
    <string name="title_activity_mpesa_payment">My Payments</string>
    <string name="no_payments">No payments found! You can select a contribution to pay!</string>
    <string name="title_activity_default_pay">Pay Now</string>
    <string name="sample_cell_phone">Mobile #</string>
    <string name="pay_amount">Amount</string>
    <string name="paid_amount">Paid: 5,000</string>
    <string name="contributed_amount">Pledge balance</string>
    <string name="title_activity_due_contributions">My Due Contributions</string>
    <string name="no_due_contributions">None of your contributions are due right now. Please check back later!</string>
    <string name="title_activity_flex_plan_pledge">My Flex Plan</string>
    <string name="add">Add</string>
    <string name="title_activity_flex_pledge_detail">Pledge Details</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_delete_flex_pledge">Confirm delete</string>
    <string name="delete_flex_pledge_desc">Are you sure you want to delete this item?</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="title_activity_verify_password_reset">Enter Reset Code</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="old_password_hint">Old password</string>
    <string name="new_password_hint">New password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="change_password_menu">Change password</string>
    <string name="title_activity_enter_email_address">EnterEmailAddressActivity</string>
    <string name="send_reset_code">SEND</string>
    <string name="title_activity_password_reset">Password Reset</string>
    <string name="user_id">User Id</string>
    <string name="reset_code">Reset code</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="reset">RESET</string>
    <string name="password_reset_header">Check your email for instructions</string>
    <string name="have_reset_code">Have reset code?</string>
    <string name="go_to_login">Login</string>
    <string name="login_option">Login</string>
    <string name="confirm_amortize">Confirm</string>
    <string name="confirm_amortize_desc">Are you sure you want to submit this plan?</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="update">UPDATE</string>
    <string name="bank_transfer_pay">BANK TRANSFER</string>
    <string name="balance">Balance</string>
    <string name="sample_balance">0</string>
    <string name="extra_mile_contribution">Extra-mile Campaigns</string>
    <string name="get_support_title">Contact Support</string>
    <string name="send">SEND</string>
    <string name="description_hint">Description</string>
    <string name="title_activity_extra_mile_campaigns">Extra Mile Campaigns</string>
    <string name="no_extra_miles">You have not donated to any extra mile campaigns. Start now!</string>
    <string name="title_activity_donate_extra_mile">Give To Extra Mile</string>
    <string name="support_email_address">tech-support@cfministry.church</string>
    <string name="title_activity_church_events">Events &amp; Activities</string>
    <string name="no_events_found">There are currently no events posted. Please check back later!</string>
    <string name="title_activity_event_details">Event Details</string>
    <string name="event_title">Twendeni Magadi</string>
    <string name="event_details">This is an event for the 25 and above to be held next week in South C</string>
    <string name="event_date">Date</string>
    <string name="event_date_sample">01/27/2019</string>
    <string name="twendeni_magadi_25">Twendeni Magadi 25</string>
    <string name="sample_date_value">Date : 1/27/2019</string>

</resources>
