<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="horizontal"
    android:layout_weight="1"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_weight=".25">

        <TextView
            android:id="@+id/target_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textSize="12sp"
            android:text="@string/target_amount"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="10sp"
            android:text="@string/target_header"/>

    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@drawable/dotted_line" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_weight=".25">

        <TextView
            android:id="@+id/total_contributed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textSize="12sp"
            android:text="@string/all_contributions"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="10sp"
            android:text="@string/contributed_header"/>

    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@drawable/dotted_line" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_weight=".25">

        <TextView
            android:id="@+id/my_target"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textColor="@color/red"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/pledges_amount"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="10sp"
            android:text="@string/my_target"/>

    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@drawable/dotted_line" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_weight=".25">

        <TextView
            android:id="@+id/my_contributions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:textSize="12sp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/contributed"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="10sp"
            android:text="@string/current_pledges"/>

    </LinearLayout>


</LinearLayout>