<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:layout_gravity="center_vertical"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:id="@+id/fullscreen_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.EnterEmailAddressActivity"
    tools:showIn="@layout/activity_enter_email_address">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/enter_email_address"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_address_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp">

        <EditText
            android:id="@+id/email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address"
            android:layout_marginBottom="8dp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_reset_code"
        android:textColor="@color/white"
        android:background="@drawable/rounded_button"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight=".5"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_marginTop="14dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/go_to_login"/>

        <TextView
            android:id="@+id/have_reset_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight=".5"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_marginTop="14dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/have_reset_code"/>


    </LinearLayout>

</LinearLayout>